@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/smplayer/smplayer-14.3.0.ebuild,v 1.5 2014/09/29 09:33:36 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/smplayer/smplayer-14.3.0.ebuild,v 1.6 2014/09/29 10:04:53 ago Exp $
 
 EAPI=5
 PLOCALES="ar_SY bg ca cs da de el_GR en_US es et eu fi fr gl he_IL hr hu it ja
@@ -16,7 +16,7 @@ DESCRIPTION="Great Qt4 GUI front-end for mplayer"
 HOMEPAGE="http://smplayer.sourceforge.net/"
 LICENSE="GPL-2 BSD"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~arm hppa ~ppc ~ppc64 ~x86 ~x86-fbsd ~amd64-linux"
+KEYWORDS="~alpha amd64 ~arm hppa ~ppc ~ppc64 ~x86 ~x86-fbsd ~amd64-linux"
 IUSE="debug"
 
 DEPEND="dev-qt/qtcore:4
