@@ -1,6 +1,9 @@
 # ChangeLog for media-video/smplayer
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/smplayer/ChangeLog,v 1.147 2014/09/29 09:33:36 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/smplayer/ChangeLog,v 1.148 2014/09/29 10:04:53 ago Exp $
+
+  29 Sep 2014; Agostino Sarubbo <ago@gentoo.org> smplayer-14.3.0.ebuild:
+  Stable for amd64, wrt bug #523402
 
   29 Sep 2014; Jeroen Roovers <jer@gentoo.org> smplayer-14.3.0.ebuild:
   Stable for HPPA (bug #523402).
